--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+allure-results/
+allure-report/
 
+.allure/
 
 /screenshots/*.png
