--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "cypress",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+"scripts": {
+  "test": "playwright test",
+  "allure:generate": "npx allure generate allure-results --clean -o allure-report",
+  "allure:open": "npx allure open allure-report",
+  "test:allure": "playwright test && npm run allure:generate && npm run allure:open"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.54.1",
-    "@types/node": "^24.1.0"
+    "@types/node": "^24.1.0",
+    "allure-playwright": "^3.3.2",
+    "allure-commandline": "^2.24.0"
   },
   "dependencies": {
     "dotenv": "^17.2.0"
