--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "cypress",
   "version": "1.0.0",
   "main": "index.js",
-"scripts": {
-  "test": "playwright test",
-  "allure:generate": "npx allure generate allure-results --clean -o allure-report",
-  "allure:open": "npx allure open allure-report",
-  "test:allure": "playwright test && npm run allure:generate && npm run allure:open"
-},
+  "scripts": {
+    "test": "rm -rf allure-results/* && playwright test",
+    "test:api": "rm -rf allure-results/* && npx playwright test --project=api-tests",
+    "test:web": "rm -rf allure-results/* && npx playwright test --project=web-tests",
+    "allure:generate": "npx allure generate allure-results --clean -o allure-report",
+    "allure:open": "npx allure open allure-report",
+    "test:allure": "rm -rf allure-results/* && playwright test && npm run allure:generate && npm run allure:open"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
