--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "devDependencies": {
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.1.0",
-    "allure-playwright": "^3.3.2",
-    "allure-commandline": "^2.24.0"
+    "allure-commandline": "^2.34.1",
+    "allure-playwright": "^3.3.2"
   },
   "dependencies": {
     "dotenv": "^17.2.0"
