--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "chalk": "^5.4.1",
-    "dotenv": "^17.2.0"
+    "dotenv": "^17.2.0",
+    "jmespath": "^0.16.0"
   }
 }
