Implement BDD tests for API authentication, user login, and logout features; update .gitignore and remove unused files

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,8 +28,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Playwright tests
-        run: npm run test
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: Run BDD tests (web + api)
+        env:
+          PW_CHANNEL: chromium
+        run: npm run test:bdd:all
 
       - name: Generate Allure report
         if: always()
