--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "cypress",
+  "name": "playwright-playground",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "rm -rf allure-results/* && playwright test",
-    "test:api": "rm -rf allure-results/* && npx playwright test --project=api-tests",
-    "test:web": "rm -rf allure-results/* && npx playwright test --project=web-tests",
+    "test": "node -e \"try{require('fs').rmSync('allure-results',{recursive:true,force:true})}catch{}\" && npm run bdd:gen && playwright test --project=bdd-web --project=bdd-api",
+    "bdd:gen": "npx bddgen test",
+    "bdd:list": "npm run bdd:gen && npx playwright test --list --project=bdd-web",
+    "bdd:list:api": "npm run bdd:gen && npx playwright test --list --project=bdd-api",
+    "test:bdd": "node -e \"try{require('fs').rmSync('allure-results',{recursive:true,force:true})}catch{}\" && npm run bdd:gen && npx playwright test --project=bdd-web",
+    "test:bdd:api": "node -e \"try{require('fs').rmSync('allure-results',{recursive:true,force:true})}catch{}\" && npm run bdd:gen && npx playwright test --project=bdd-api",
+    "test:bdd:all": "node -e \"try{require('fs').rmSync('allure-results',{recursive:true,force:true})}catch{}\" && npm run bdd:gen && npx playwright test --project=bdd-web --project=bdd-api",
     "allure:generate": "npx allure generate allure-results --clean -o allure-report",
     "allure:open": "npx allure open allure-report",
-    "test:allure": "rm -rf allure-results/* && playwright test && npm run allure:generate && npm run allure:open"
+    "test:allure": "node -e \"try{require('fs').rmSync('allure-results',{recursive:true,force:true})}catch{}\" && npm run bdd:gen && playwright test && npm run allure:generate && npm run allure:open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.54.1",
+    "@playwright/test": "^1.54.2",
     "@types/node": "^24.1.0",
     "allure-commandline": "^2.34.1",
-    "allure-playwright": "^3.3.2"
+    "allure-playwright": "^3.3.2",
+    "playwright": "^1.54.2",
+    "playwright-bdd": "^8.3.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "chalk": "^5.4.1",
